# focal-stats

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  push.yml  release.yml  test.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  focal_stats.focal_stats.rst  focal_stats.grouped_stats.rst  focal_stats.rolling.rst  focal_stats.rst  focal_stats.strata_stats.rst  index.rst  installation.rst  methods.rst  modules.rst  pyspatialstats.focal_stats.rst  pyspatialstats.grouped_stats.rst  pyspatialstats.rolling.rst  pyspatialstats.rst  pyspatialstats.strata_stats.rst  spatial_stats.focal_stats.rst  spatial_stats.grouped_stats.rst  spatial_stats.rolling.rst  spatial_stats.rst  spatial_stats.strata_stats.rst
focal_stats/: __init__.py  focal_function.py  raster_window.py  raster_windows.py  rolling.py  types.py  utils.py  window.py  windows.py
focal_stats/core/: __init__.py  focal_correlation.pyx  focal_function.py  focal_statistics.pyx  iteration_params.pyx  utils.pxd  utils.py  utils.pyx
focal_stats/focal_stats/: __init__.py  _focal_correlation_core.pyx  focal_correlation.py  focal_correlation.pyx  focal_statistics.py  focal_statistics.pyx  iteration_params.pxd  iteration_params.pyx
focal_stats/grouped_stats/: __init__.py  _grouped_correlation.pxd  _grouped_correlation.pyx  _grouped_count.pxd  _grouped_count.pyx  _grouped_linear_regression.pyx  _grouped_max.pxd  _grouped_max.pyx  _grouped_mean.pxd  _grouped_mean.pyx  _grouped_min.pxd  _grouped_min.pyx  _grouped_std.pxd  _grouped_std.pyx  grouped_stats.py  utils.py
focal_stats/rolling/: __init__.py  rolling_stats.py  rolling_window.py
pyspatialstats/: __init__.py  focal_function.py  raster_window.py  utils.py  window.py
spatial_stats/: __init__.py  focal_function.py  raster_window.py  stat_helper_functions.py  types.py  utils.py  window.py
tests/: focal_correlation_timeit.py  test_focal_correlations.py  test_focal_function.py  test_focal_statistics.py  test_raster_windows.py  test_rolling.py  test_strata_stats.py  test_windows.py
(+57 files in other folders)
